c_cpp_includes/dtwainx.h

DTWAIN_BOOL    DLLENTRY_DEF      DTWAIN_EndTwainSession(VOID_PROTOTYPE);
/* DTWAIN Message Notification functions */
DTWAIN_BOOL    DLLENTRY_DEF      DTWAIN_EnableMsgNotify(DTWAIN_BOOL bSet);
LONG DLLENTRY_DEF DTWAIN_CallCallback(WPARAM wParam, LPARAM lParam, LONG UserData);
DTWAIN_BOOL    DLLENTRY_DEF      DTWAIN_CloseSource(DTWAIN_SOURCE Source);
DTWAIN_BOOL    DLLENTRY_DEF      DTWAIN_CloseSourceUI(DTWAIN_SOURCE Source);
DTWAIN_BOOL    DLLENTRY_DEF      DTWAIN_EnumExtendedCaps(DTWAIN_SOURCE Source,LPDTWAIN_ARRAY pArray );
DTWAIN_BOOL    DLLENTRY_DEF      DTWAIN_EnumCustomCaps(DTWAIN_SOURCE Source,LPDTWAIN_ARRAY pArray );
DTWAIN_BOOL    DLLENTRY_DEF      DTWAIN_ArrayInsertAtLong(DTWAIN_ARRAY pArray, LONG nWhere, LONG pVal);
DTWAIN_BOOL    DLLENTRY_DEF      DTWAIN_ArrayInsertAtLong64(DTWAIN_ARRAY pArray, LONG nWhere, LONG64 Val);
DTWAIN_BOOL    DLLENTRY_DEF      DTWAIN_ArrayInsertAtFloat(DTWAIN_ARRAY pArray, LONG nWhere,  DTWAIN_FLOAT pVal);
DTWAIN_BOOL    DLLENTRY_DEF      DTWAIN_ArrayInsertAtN(DTWAIN_ARRAY pArray, LONG nWhere, LPVOID pVariant, LONG num);
DTWAIN_BOOL    DLLENTRY_DEF      DTWAIN_ArrayInsertAtLongN(DTWAIN_ARRAY pArray, LONG nWhere, LONG pVal, LONG num);
DTWAIN_BOOL    DLLENTRY_DEF      DTWAIN_ArrayInsertAtLong64N(DTWAIN_ARRAY pArray, LONG nWhere, LONG64 Val, LONG num);
DTWAIN_BOOL    DLLENTRY_DEF      DTWAIN_ArrayInsertAtFloatN(DTWAIN_ARRAY pArray, LONG nWhere, DTWAIN_FLOAT Val, LONG num);
DTWAIN_BOOL    DLLENTRY_DEF      DTWAIN_ArrayRemoveAll(DTWAIN_ARRAY pArray );
DTWAIN_BOOL    DLLENTRY_DEF      DTWAIN_ArrayRemoveAt(DTWAIN_ARRAY pArray, LONG nWhere);
DTWAIN_BOOL    DLLENTRY_DEF      DTWAIN_ArrayRemoveAtN(DTWAIN_ARRAY pArray, LONG nWhere, LONG num);
DTWAIN_BOOL    DLLENTRY_DEF      DTWAIN_ArrayResize(DTWAIN_ARRAY pArray, LONG NewSize);
DTWAIN_BOOL    DLLENTRY_DEF      DTWAIN_ArraySetAt(DTWAIN_ARRAY pArray, LONG lPos, LPVOID pVariant );
DTWAIN_BOOL    DLLENTRY_DEF      DTWAIN_ArraySetAtLong(DTWAIN_ARRAY pArray, LONG nWhere, LONG pVal);
DTWAIN_BOOL    DLLENTRY_DEF      DTWAIN_ArraySetAtLong64(DTWAIN_ARRAY pArray, LONG nWhere, LONG64 Val);
DTWAIN_BOOL    DLLENTRY_DEF      DTWAIN_ArraySetAtFloat(DTWAIN_ARRAY pArray, LONG nWhere, DTWAIN_FLOAT pVal);
DTWAIN_ARRAY   DLLENTRY_DEF      DTWAIN_CreateAcquisitionArray(VOID_PROTOTYPE);
DTWAIN_BOOL    DLLENTRY_DEF      DTWAIN_DestroyAcquisitionArray(DTWAIN_ARRAY aAcq, DTWAIN_BOOL bDestroyData );
/* File acquisition query of formats supported */
DTWAIN_BOOL    DLLENTRY_DEF      DTWAIN_EnumFileXferFormats(DTWAIN_SOURCE Source, LPDTWAIN_ARRAY pArray);
LONG                 DLLENTRY_DEF    DTWAIN_EnumContrastValues(DTWAIN_SOURCE Source, LPDTWAIN_ARRAY pArray, DTWAIN_BOOL bExpandIfRange);
LONG                 DLLENTRY_DEF    DTWAIN_EnumBrightnessValues(DTWAIN_SOURCE Source, LPDTWAIN_ARRAY pArray, DTWAIN_BOOL bExpandIfRange);
DTWAIN_BOOL          DLLENTRY_DEF    DTWAIN_EnableIndicator(DTWAIN_SOURCE Source, DTWAIN_BOOL bEnable );
DTWAIN_BOOL          DLLENTRY_DEF    DTWAIN_EnableThumbnail(DTWAIN_SOURCE Source, DTWAIN_BOOL bEnable );
LONG             DLLENTRY_DEF DTWAIN_CallDSMProc(DTWAIN_IDENTITY AppID, DTWAIN_IDENTITY SourceId,LONG lDG, LONG lDAT, LONG lMSG, LPVOID pData);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_EnumCompressionTypes(DTWAIN_SOURCE Source, LPDTWAIN_ARRAY pArray);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_EnablePrinter(DTWAIN_SOURCE Source, DTWAIN_BOOL bEnable);
/* Document feeder functions */
DTWAIN_BOOL    DLLENTRY_DEF       DTWAIN_EnableFeeder(DTWAIN_SOURCE Source, DTWAIN_BOOL bSet );
DTWAIN_BOOL    DLLENTRY_DEF       DTWAIN_ClearPage(DTWAIN_SOURCE Source);
DTWAIN_BOOL    DLLENTRY_DEF       DTWAIN_EnableAutoFeed(DTWAIN_SOURCE Source, DTWAIN_BOOL bSet);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_EnableDuplex(DTWAIN_SOURCE Source, DTWAIN_BOOL bEnable);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_EnumBitDepths(DTWAIN_SOURCE Source, LPDTWAIN_ARRAY pArray);
/* Text element used for DTWAIN_AddPDFTextElement function */
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_DestroyPDFTextElement(DTWAIN_PDFTEXTELEMENT TextElement);
/* Setting the text element */
DTWAIN_PDFTEXTELEMENT DLLENTRY_DEF DTWAIN_CreatePDFTextElement(VOID_PROTOTYPE);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_EnumJobControls(DTWAIN_SOURCE Source, LPDTWAIN_ARRAY pArray);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_EnableJobFileHandling(DTWAIN_SOURCE Source, DTWAIN_BOOL bSet);
/* Border detection and deskew for scanners that support these capabilities */
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_EnableAutoDeskew(DTWAIN_SOURCE Source, DTWAIN_BOOL bEnable);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_EnableAutoBorderDetect(DTWAIN_SOURCE Source, DTWAIN_BOOL bEnable);
/* Light path */
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_EnumLightPaths(DTWAIN_SOURCE Source, LPDTWAIN_ARRAY LightPath);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_EnableLamp(DTWAIN_SOURCE Source, DTWAIN_BOOL bEnable);
/* Light Source */
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_EnumLightSources(DTWAIN_SOURCE Source, LPDTWAIN_ARRAY LightSources);
/* Return all the supported ExtImageInfo types.  This function is useful if your app
   wants to know what types of Extended Image Information is supported by the Source */
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_EnumExtImageInfoTypes(DTWAIN_SOURCE Source, LPDTWAIN_ARRAY pArray);
/* Camera functions */
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_EnumCameras(DTWAIN_SOURCE Source, LPDTWAIN_ARRAY Cameras);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_EnumBottomCameras(DTWAIN_SOURCE Source, LPDTWAIN_ARRAY Cameras);
/* CAP_ALARMS */
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_EnumAlarms(DTWAIN_SOURCE Source, LPDTWAIN_ARRAY pArray);
/* CAP_AUTOSCAN */
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_EnableAutoScan(DTWAIN_SOURCE Source, DTWAIN_BOOL bEnable);
/* CAP_CLEARBUFFERS */
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_ClearBuffers(DTWAIN_SOURCE Source, LONG ClearBuffer );
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_EnumMaxBuffers(DTWAIN_SOURCE Source, LPDTWAIN_ARRAY pMaxBufs, DTWAIN_BOOL bExpandRange);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_EnableAutoBright(DTWAIN_SOURCE Source, DTWAIN_BOOL bSet);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_EnableAutoRotate(DTWAIN_SOURCE Source, DTWAIN_BOOL bSet);
LONG                 DLLENTRY_DEF    DTWAIN_EnumHighlightValues(DTWAIN_SOURCE Source, LPDTWAIN_ARRAY pArray, DTWAIN_BOOL bExpandIfRange);
/* Miscellaneous code */
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_DisableAppWindow(HWND hWnd, DTWAIN_BOOL bDisable);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_EndThread( DTWAIN_HANDLE DLLHandle );
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_ClearErrorBuffer(VOID_PROTOTYPE);