language_bindings/Delphi/dtwain64u.pas

  function DTWAIN_ArrayInsertAtANSIString(pArray:DTWAIN_ARRAY;nWhere:DWORD;pVal:PAnsiChar):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_ArrayInsertAtANSIString';
  function DTWAIN_ArrayInsertAtANSIStringN(pArray:DTWAIN_ARRAY;nWhere:DWORD;Val:PAnsiChar;num:DWORD):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_ArrayInsertAtANSIStringN';
  function DTWAIN_ArrayInsertAtFloat(pArray:DTWAIN_ARRAY;nWhere:DWORD;pVal:DTWAIN_FLOAT):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_ArrayInsertAtFloat';
  function DTWAIN_ArrayInsertAtFloatN(pArray:DTWAIN_ARRAY;nWhere:DWORD;Val:DTWAIN_FLOAT;num:DWORD):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_ArrayInsertAtFloatN';
  function DTWAIN_ArrayInsertAtLong(pArray:DTWAIN_ARRAY;nWhere:DWORD;pVal:DWORD):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_ArrayInsertAtLong';
  function DTWAIN_ArrayInsertAtLong64(pArray:DTWAIN_ARRAY;nWhere:DWORD;Val:Int64):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_ArrayInsertAtLong64';
  function DTWAIN_ArrayInsertAtLong64N(pArray:DTWAIN_ARRAY;nWhere:DWORD;Val:Int64;num:DWORD):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_ArrayInsertAtLong64N';
  function DTWAIN_ArrayInsertAtLongN(pArray:DTWAIN_ARRAY;nWhere:DWORD;pVal:DWORD;num:DWORD):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_ArrayInsertAtLongN';
  function DTWAIN_ArrayInsertAtN(pArray:DTWAIN_ARRAY;nWhere:DWORD;pVariant:LPVOID;num:DWORD):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_ArrayInsertAtN';
  function DTWAIN_ArrayInsertAtString(pArray:DTWAIN_ARRAY;nWhere:DWORD;pVal:LPCWSTR):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_ArrayInsertAtString';
  function DTWAIN_ArrayInsertAtStringA(pArray:DTWAIN_ARRAY;nWhere:DWORD;pVal:PAnsiChar):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_ArrayInsertAtStringA';
  function DTWAIN_ArrayInsertAtStringN(pArray:DTWAIN_ARRAY;nWhere:DWORD;Val:LPCWSTR;num:DWORD):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_ArrayInsertAtStringN';
  function DTWAIN_ArrayInsertAtStringNA(pArray:DTWAIN_ARRAY;nWhere:DWORD;Val:PAnsiChar;num:DWORD):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_ArrayInsertAtStringNA';
  function DTWAIN_ArrayInsertAtStringNW(pArray:DTWAIN_ARRAY;nWhere:DWORD;Val:PWideChar;num:DWORD):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_ArrayInsertAtStringNW';
  function DTWAIN_ArrayInsertAtStringW(pArray:DTWAIN_ARRAY;nWhere:DWORD;pVal:PWideChar):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_ArrayInsertAtStringW';
  function DTWAIN_ArrayInsertAtWideString(pArray:DTWAIN_ARRAY;nWhere:DWORD;pVal:PWideChar):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_ArrayInsertAtWideString';
  function DTWAIN_ArrayInsertAtWideStringN(pArray:DTWAIN_ARRAY;nWhere:DWORD;Val:PWideChar;num:DWORD):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_ArrayInsertAtWideStringN';
  function DTWAIN_ArrayRemoveAll(pArray:DTWAIN_ARRAY):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_ArrayRemoveAll';
  function DTWAIN_ArrayRemoveAt(pArray:DTWAIN_ARRAY;nWhere:DWORD):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_ArrayRemoveAt';
  function DTWAIN_ArrayRemoveAtN(pArray:DTWAIN_ARRAY;nWhere:DWORD;num:DWORD):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_ArrayRemoveAtN';
  function DTWAIN_ArrayResize(pArray:DTWAIN_ARRAY;NewSize:DWORD):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_ArrayResize';
  function DTWAIN_ArraySetAt(pArray:DTWAIN_ARRAY;lPos:DWORD;pVariant:LPVOID):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_ArraySetAt';
  function DTWAIN_ArraySetAtANSIString(pArray:DTWAIN_ARRAY;nWhere:DWORD;pStr:PAnsiChar):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_ArraySetAtANSIString';
  function DTWAIN_ArraySetAtFloat(pArray:DTWAIN_ARRAY;nWhere:DWORD;pVal:DTWAIN_FLOAT):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_ArraySetAtFloat';
  function DTWAIN_ArraySetAtLong(pArray:DTWAIN_ARRAY;nWhere:DWORD;pVal:DWORD):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_ArraySetAtLong';
  function DTWAIN_ArraySetAtLong64(pArray:DTWAIN_ARRAY;nWhere:DWORD;Val:Int64):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_ArraySetAtLong64';
  function DTWAIN_ArraySetAtString(pArray:DTWAIN_ARRAY;nWhere:DWORD;pStr:LPCWSTR):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_ArraySetAtString';
  function DTWAIN_ArraySetAtStringA(pArray:DTWAIN_ARRAY;nWhere:DWORD;pStr:PAnsiChar):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_ArraySetAtStringA';
  function DTWAIN_ArraySetAtStringW(pArray:DTWAIN_ARRAY;nWhere:DWORD;pStr:PWideChar):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_ArraySetAtStringW';
  function DTWAIN_ArraySetAtWideString(pArray:DTWAIN_ARRAY;nWhere:DWORD;pStr:PWideChar):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_ArraySetAtWideString';
  function DTWAIN_CallCallback(wParam:DWORD;lParam:DWORD;UserData:DWORD):DWORD;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_CallCallback';
  function DTWAIN_CallDSMProc(AppID:TWAIN_IDENTITY;SourceId:TWAIN_IDENTITY;lDG:DWORD;lDAT:DWORD;lMSG:DWORD;pData:LPVOID):DWORD;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_CallDSMProc';
  function DTWAIN_ClearBuffers(Source:DTWAIN_SOURCE;ClearBuffer:DWORD):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_ClearBuffers';
  function DTWAIN_ClearErrorBuffer:DTWAIN_BOOL; stdcall;
 external 'DTWAIN64U.DLL' name 'DTWAIN_ClearErrorBuffer';
  function DTWAIN_ClearPDFText(Source:DTWAIN_SOURCE):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_ClearPDFText';
  function DTWAIN_ClearPage(Source:DTWAIN_SOURCE):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_ClearPage';
  function DTWAIN_CloseSource(Source:DTWAIN_SOURCE):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_CloseSource';
  function DTWAIN_CloseSourceUI(Source:DTWAIN_SOURCE):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_CloseSourceUI';
  function DTWAIN_CreateAcquisitionArray:DTWAIN_ARRAY; stdcall;
 external 'DTWAIN64U.DLL' name 'DTWAIN_CreateAcquisitionArray';
  function DTWAIN_CreatePDFTextElement(Source:DTWAIN_SOURCE):DWORD;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_CreatePDFTextElement';
  function DTWAIN_DestroyAcquisitionArray(aAcq:DTWAIN_ARRAY;bDestroyData:DTWAIN_BOOL):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_DestroyAcquisitionArray';
  function DTWAIN_DestroyPDFTextElement(TextElement:DTWAIN_PDFTEXTELEMENT):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_DestroyPDFTextElement';
  function DTWAIN_DisableAppWindow(hWnd:HWND;bDisable:DTWAIN_BOOL):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_DisableAppWindow';
  function DTWAIN_EnableAutoBorderDetect(Source:DTWAIN_SOURCE;bEnable:DTWAIN_BOOL):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_EnableAutoBorderDetect';
  function DTWAIN_EnableAutoBright(Source:DTWAIN_SOURCE;bSet:DTWAIN_BOOL):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_EnableAutoBright';
  function DTWAIN_EnableAutoDeskew(Source:DTWAIN_SOURCE;bEnable:DTWAIN_BOOL):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_EnableAutoDeskew';
  function DTWAIN_EnableAutoFeed(Source:DTWAIN_SOURCE;bSet:DTWAIN_BOOL):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_EnableAutoFeed';
  function DTWAIN_EnableAutoRotate(Source:DTWAIN_SOURCE;bSet:DTWAIN_BOOL):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_EnableAutoRotate';
  function DTWAIN_EnableAutoScan(Source:DTWAIN_SOURCE;bEnable:DTWAIN_BOOL):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_EnableAutoScan';
  function DTWAIN_EnableDuplex(Source:DTWAIN_SOURCE;bEnable:DTWAIN_BOOL):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_EnableDuplex';
  function DTWAIN_EnableFeeder(Source:DTWAIN_SOURCE;bSet:DTWAIN_BOOL):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_EnableFeeder';
  function DTWAIN_EnableIndicator(Source:DTWAIN_SOURCE;bEnable:DTWAIN_BOOL):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_EnableIndicator';
  function DTWAIN_EnableJobFileHandling(Source:DTWAIN_SOURCE;bSet:DTWAIN_BOOL):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_EnableJobFileHandling';
  function DTWAIN_EnableLamp(Source:DTWAIN_SOURCE;bEnable:DTWAIN_BOOL):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_EnableLamp';
  function DTWAIN_EnableMsgNotify(bSet:DTWAIN_BOOL):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_EnableMsgNotify';
  function DTWAIN_EnablePatchDetect(Source:DTWAIN_SOURCE;bEnable:DTWAIN_BOOL):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_EnablePatchDetect';
  function DTWAIN_EnablePrinter(Source:DTWAIN_SOURCE;bEnable:DTWAIN_BOOL):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_EnablePrinter';
  function DTWAIN_EnableThumbnail(Source:DTWAIN_SOURCE;bEnable:DTWAIN_BOOL):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_EnableThumbnail';
  function DTWAIN_EndThread(DLLHandle:DWORD):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_EndThread';
  function DTWAIN_EndTwainSession:DTWAIN_BOOL; stdcall;
 external 'DTWAIN64U.DLL' name 'DTWAIN_EndTwainSession';
  function DTWAIN_EnumAlarms(Source:DTWAIN_SOURCE;pArray:LPDTWAIN_ARRAY):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_EnumAlarms';
  function DTWAIN_EnumBitDepths(Source:DTWAIN_SOURCE;pArray:LPDTWAIN_ARRAY):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_EnumBitDepths';
  function DTWAIN_EnumBottomCameras(Source:DTWAIN_SOURCE;Cameras:LPDTWAIN_ARRAY):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_EnumBottomCameras';
  function DTWAIN_EnumBrightnessValues(Source:DTWAIN_SOURCE;pArray:LPDTWAIN_ARRAY;bExpandIfRange:DTWAIN_BOOL):DWORD;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_EnumBrightnessValues';
  function DTWAIN_EnumCameras(Source:DTWAIN_SOURCE;Cameras:LPDTWAIN_ARRAY):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_EnumCameras';
  function DTWAIN_EnumCompressionTypes(Source:DTWAIN_SOURCE;pArray:LPDTWAIN_ARRAY):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_EnumCompressionTypes';
  function DTWAIN_EnumContrastValues(Source:DTWAIN_SOURCE;pArray:LPDTWAIN_ARRAY;bExpandIfRange:DTWAIN_BOOL):DWORD;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_EnumContrastValues';
  function DTWAIN_EnumCustomCaps(Source:DTWAIN_SOURCE;pArray:LPDTWAIN_ARRAY):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_EnumCustomCaps';
  function DTWAIN_EnumExtImageInfoTypes(Source:DTWAIN_SOURCE;pArray:LPDTWAIN_ARRAY):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_EnumExtImageInfoTypes';
  function DTWAIN_EnumExtendedCaps(Source:DTWAIN_SOURCE;pArray:LPDTWAIN_ARRAY):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_EnumExtendedCaps';
  function DTWAIN_EnumFileXferFormats(Source:DTWAIN_SOURCE;pArray:LPDTWAIN_ARRAY):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_EnumFileXferFormats';
  function DTWAIN_EnumHighlightValues(Source:DTWAIN_SOURCE;pArray:LPDTWAIN_ARRAY;bExpandIfRange:DTWAIN_BOOL):DWORD;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_EnumHighlightValues';
  function DTWAIN_EnumJobControls(Source:DTWAIN_SOURCE;pArray:LPDTWAIN_ARRAY):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_EnumJobControls';
  function DTWAIN_EnumLightPaths(Source:DTWAIN_SOURCE;LightPath:LPDTWAIN_ARRAY):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_EnumLightPaths';
  function DTWAIN_EnumLightSources(Source:DTWAIN_SOURCE;LightSources:LPDTWAIN_ARRAY):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_EnumLightSources';
  function DTWAIN_EnumMaxBuffers(Source:DTWAIN_SOURCE;pMaxBufs:LPDTWAIN_ARRAY;bExpandRange:DTWAIN_BOOL):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_EnumMaxBuffers';
